# tz-06-17

./: .dockerignore  .gitignore  README.md  docker-compose.yml  env.example  pyproject.toml
etc/compose/src/: Dockerfile
src/api/: serializers.py  urls.py  views.py
src/apps/employees_department/: admin.py  apps.py  models.py
src/apps/employees_department/management/commands/: create_test_data.py
src/apps/employees_department/migrations/: 0001_initial.py
src/core/: asgi.py  urls.py
src/core/settings/: __init__.py  base.py  development.py  local.py  production.py
