[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Rustam <mrustam9929@gmial.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
python-dotenv = "^1.0.1"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"
psycopg2-binary = "^2.9.9"
django-mptt = "^0.16.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
